--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,16 @@
             "name": "thihaeung"
         }
     ],
+    "extra": {
+        "laravel": {
+            "providers": [
+                "ThihaMorph\\MyanMap\\DatabaseServiceProvider"
+            ],
+            "migrations": [
+                "myan-map-migrations"
+            ]
+        }
+    },
     "minimum-stability": "dev",
     "require": {}
 }
