change script command

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "scripts": {
-        "install": [
+        "post-install-cmd": [
             "php artisan myanmap:data"
         ]
     },
