--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,11 @@
             "migrations": [
                 "myan-map-migrations"
             ]
-        }
+        },
+        "license": "MIT"
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^7.3 || ^8.0"
+    }
 }
