--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.3 || ^8.0"
+        "php": "^7.3 || ^8.0",
+        "rabbit-converter/rabbit-php": "dev-master"
     }
 }
