--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         },
         "license": "MIT"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^8.1",
