--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     }
 }
