--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1"
+        "php": ">=7.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
